2009-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendar-common-sets.xul:
	added an "Export Task" menu item to the task context menu, that
	triggers the export of the selected tasks.

	* install.rdf: version number set to 0.97pre1

	* chrome/content/sogo-connector/calendar/utils.js: slightly
	modified to override modifyEventWithDialog rather than openDialog.
	Fixed to take the recurrence state of the selected item into
	account.

2009-08-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/utils.js: if an item
	changes during a calendar refresh, we must fetch the new item from
	the calendar and bind it to the editing/summary dialog. Otherwise
	the old version is still used.

2009-08-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	modified to handle "valid-sync-token" synchronization errors.

	* chrome/content/sogo-connector/calendar/calendar-summary-dialog.xul:
	new version of the overlay, only for including utils.js and
	thereby have access to our version of isCalendarWritable.

	* js/CalDAVAclManager.js: we remove the entries pertaining to
	subitems when a refresh occurs on a calendar entry.

2009-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/calendar/calendar-summary-dialog.{js,xul}:
	removed overlays, modified code put back in Lightning (inverse edition).

2009-07-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js
	We now keep custom fields between roundtrips.
	See http://www.scalableogo.org/bugs/view.php?id=32

2009-07-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/utils.js: overriden
	"openDialog" to force a refresh of the item calendar before
	displaying the dialog IF the item is an invitation or is read-only.

2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*